# homefront

./: .gitignore  .gitmodules  README.rst  html-minifier.json  package-lock.json  package.json  pelicanconf.py  publishconf.py  rollup.config.js  setup.cfg  setup.py
content/code/: 2014-07-19-Mozilla-BSP.rst
content/pages/: aboutme.rst  code.rst  food.rst  index.rst  misc.rst
content/talks/: 2014-10-25-pyconfr-2014.rst  2015-10-17-pyconfr-2015.rst  2015-10-30-upmc-network.rst  2016-10-15-pyconfr-2016.rst  2017-02-05-fosdem-2017.rst  2018-01-19-upmc-network-19.rst
homefront/: __init__.py  bootstrap.py  generators.py  googleclosure.py  release.py  settings.py
homefront/pelican/: bootstrap.py  googleclosure.py  sass.py  spotify.py
homefront/themes/default/js/: main.js
homefront/themes/default/scss/: _theme.scss  main.scss
homefront/themes/default/templates/: base.html
homefront/tools/: quickstart.py
theme/default/js/: main.js
theme/default/scss/: _theme.scss  _variables.scss  styles.scss
theme/default/templates/: article.html  base.html  category.html  index.html  page.html  spotify.html  spotify_playlist.html  tag.html
