[metadata]
name = homefront
version = 0.1.0
url = https://github.com/Martiusweb/homefront/
author = Martin Richard
author_email = martius@martiusweb.net
license = Apache 2
description = Boilerplate for a static website in Python
long_description = file: README.rst

[options]
packages = find:
python_requires = >=3.5
# homefront is not zip_safe because pelican can't load resources (theme) from a
# zip
zip_safe = False

install_requires =
    pelican >=4.0
    requests >=2.14
    PyGithub >=1.43
    packaging >= 18.0
    libsass >= 0.18

[pylama]
format = pylint
skip = */.tox/*,*/.env/*
linters = pylint,mccabe,pep8
ignore = F0401,C0111,E731

[options.entry_points]
console_scripts =
    homefront-quickstart = homefront.tools.quickstart:main
