[metadata]
name = homefront
version = 0.1.0
url = https://github.com/Martiusweb/homefront/
author = Martin Richard
author_email = martius@martiusweb.net
license = Apache 2
description = Boilerplate for a static website in Python
long_description = file: README.rst

[options]
packages = find:
python_requires = >=3.7
zip_safe = True

dependency_links =
    git+https://github.com/Martiusweb/festune.git#egg=festune

install_requires =
    pelican >=4.0
    festune

[pylama]
format = pylint
skip = */.tox/*,*/.env/*
linters = pylint,mccabe,pep8
ignore = F0401,C0111,E731
